adicionando overflow e fixando o menu principal

--- a/css/index.css
+++ b/css/index.css
@@ -10,9 +10,12 @@ body{
 }
 
 .cabecalho{
+    position:fixed;
     border-top: 3px solid #96031A;
     background-color: #FBFFFE;
     width: 100%;
+    overflow: hidden;
+
 }
 .nav-cabecalho{
     display: flex;
@@ -22,7 +25,7 @@ body{
 }
 .titulo-principal .logo{
     max-width: 181px;
-    height: 110px;
+    height: 100px;
 }
 
 .opcao{
@@ -49,6 +52,8 @@ body{
     background-attachment: fixed;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
+
 }
 
 .destaque .container{
@@ -85,8 +90,11 @@ body{
 
 /*sobre*/
 .sobre{
+        width: 100%;
        height: 100vh;
        padding: 3em 0 6em 0;
+       overflow: hidden;
+
 }
 
 .subtitulo{
@@ -123,6 +131,8 @@ body{
 /*secao serviços*/
 
 .servicos{  
+    overflow: hidden;
+    width: 100%;
     height: 100vh;
     background-color: #1b1b1e;
     color: white;
@@ -196,8 +206,10 @@ body{
 
 /*contato*/
 .contato{
+        width: 100%;
         height: 100vh;
        padding: 3em 0 6em 0;
+        overflow: hidden;
 }
 
  form {
@@ -270,6 +282,7 @@ input, textarea {
 .rodape{
     width: 100%;
     background-color: #FBFFFE;
+    overflow: hidden;
     
 }
 
@@ -281,7 +294,7 @@ input, textarea {
 }
 
 .logo-rodape img{
-    width: 140px;
+    max-width: 140px;
 }
 
 .nav-rodape a  {
